--- a/lessons-game/cour_juste_prix/cour_juste_prix.cbp
+++ b/lessons-game/cour_juste_prix/cour_juste_prix.cbp
@@ -32,7 +32,13 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="constantes.h" />
+		<Unit filename="dictionnaire.h" />
+		<Unit filename="jeu.cpp" />
+		<Unit filename="jeu.h" />
 		<Unit filename="main.cpp" />
+		<Unit filename="menu.cpp" />
+		<Unit filename="menu.h" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
 		</Extensions>
